[package]
name = "qip-core"
version = "0.1.0"
edition = "2021"
authors = ["QIP Protocol Team"]
license = "Apache-2.0"
description = "Core QIP Protocol - Cryptography, Consensus, Networking"

[dependencies]
sha3 = "0.10"
bls12_381 = "0.7"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.0", features = ["full"] }
dashmap = "5.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
